# LinuxAppDev2024

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: 1.test  2.test  Makefile  range.c  script1.gdb  script2.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protected.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c
08_I18n/: configure.ac
08_I18n/po/: POTFILES.in  ru.po
08_I18n/src/: Makefile.am  num_guess.c
09_PatchDiff/: 1.patch  2.patch  3.patch  Makefile  maze.c
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  buf.h
10_LibTesting/tests/: Makefile.am  tests.checkmk
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac  num_guess.c  ru.po
12_InstallPackaging/: Doxyfile.in  Makefile.am  configure.ac  num_guess.c  ru.po  tests.c
